--- a/index.html
+++ b/index.html
@@ -140,13 +140,28 @@
                 Selamat Datang di Website Resmi Desa Cikeas Udik
               </h4>             
                   <p>Saya selaku Kepala Desa Cikeas Udik mengucapkan selamat datang di Website milik Desa Cikeas Udik. Di era globalisasi ini, teknologi berkembang dengan pesat dan tidak dapat dipungkiri bahwa keberadaan sebuah Media Informasi pada suatu instansi adalah sebuah keniscayaan. Melalui media informasi berbasis website ini, kami menyampaikan berbagai informasi mengenai gambaran umum Desa Cikeas Udik dan program kerja yang dilakukan oleh pemerintah desa. Semoga website ini menjadi sarana komunikasi yang baik antara Pemerintah Desa Cikeas Udik dengan berbagai pihak khususnya masyarakat Desa Cikeas Udik. </p>
-                  <p>(Miptahul Palah, SE)</p>
-                </div><!-- End .content-->
+                  <p>(Miptahul Palah, SE)</p>     
+            </div><!-- End .content-->
           </div>
         </div>
 
       </div>
     </section><!-- End About Us Section -->
+
+    <!-- ======= Video Profile Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-12 text-center text-lg-center">
+            <h3>Video <span>Profile</span> Desa <span>Cikeas </span> Udik</h3>
+            <p><iframe width="800" height="500" src="https://www.youtube.com/embed/JdBINIcjrL4?si=vBx8AwoecKOF0aXq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+          </div>
+        
+        </div>
+
+      </div>
+    </section><!-- End Video Profile Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
