--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Selamat Datang di Desa Cikeas Udik</h2>
               <p>Alamat Kantor Desa:</p>
-              <p>Jl. Swadaya I No 48 RT 003 / RW 008, Desa Cikeas Udik 16966</p>
+              <p>Jl. Swadaya I No 48 RT 003 / RW 008, Desa Cikeas Udik, Kode Pos 16966</p>
               <p>Kecamatan Gunung Putri Kabupaten Bogor</p>
             </div>
           </div>
@@ -77,7 +77,7 @@
         <div class="carousel-item" style="background-image: url(assets/img/home/slide-2.jpg);">
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
-              <h2>Sejarah Singkat Desa Cikeas Udik</h2>
+              <h2>Sejarah Singkat Nama Desa Cikeas Udik</h2>
               <p>Kata “Cikeas” berasal dari nama sungai yaitu Sungai Cikeas yang mengalir dari hulu di daerah Puncak Bogor melintasi Desa Cikeas Udik hingga ke Kabupaten Bekasi. Sedangkan kata “Udik” dimaksudkan sebagai ujung terluar karena di Desa Cikeas Udik, Sungai Cikeas menjadi batas wilayah antara Kabupaten Bogor dengan Kota Depok dan Kota Bekasi. Nama “Udik” juga menjadi pembeda antara Desa Cikeas Udik di Kecamatan Gunung Putri dengan Desa Cikeas di Kecamatan Sukaraja Kabupaten Bogor yang berada di daerah hulu Sungai Cikeas.</p>
               
             </div>
@@ -89,8 +89,7 @@
           <div class="carousel-container">
             <div class="carousel-content animate__animated animate__fadeInUp">
               <h2>Demografi Desa Cikeas Udik</h2>
-              <p>Berdasarkan Sensus Penduduk oleh BPS Tahun 2020 (SP2020) di Desa Cikeas Udik Kecamatan Gunung Putri Kabupaten Bogor terdapat 8.318 Kepala Keluarga (KK) dengan jumlah penduduk sebanyak 23.272 jiwa. </p>
-             <p>Desa Cikeas Udik terdiri dari 86 RT, 26 RW, dan 5 Dusun.</p>
+              <p>Wilayah Desa Cikeas Udik terdiri dari 5 Dusun, 26 RW, dan 86 RT. Berdasarkan Sensus Penduduk oleh BPS Tahun 2020 (SP2020), di Desa Cikeas Udik terdapat 8.318 Kepala Keluarga (KK) dengan jumlah penduduk sebanyak 23.272 jiwa. </p>
             </div>
           </div>
         </div>
@@ -118,7 +117,7 @@
 
         <div class="row">
           <div class="col-lg-12 text-center text-lg-center">
-            <h3>Visi <span>dan</span> Misi <span>Kepala </span> Desa</h3>
+            <h3>Visi <span>Kepala</span> Desa <span>Cikeas </span> Udik</h3>
             <p> Mewujudkan Cikeas Udik Sehat, Nyaman, Tentram, Mandiri, dan Berkeadaban</p>
           </div>
           
@@ -132,7 +131,7 @@
 
         <div class="row no-gutters">
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" 
-          style="background-image: url(assets/img/home/gambar_depan.png);"></div>
+          style="background-image: url(assets/img/home/gambar_depan.jpg);"></div>
           <div class="col-xl-7 ps-0 ps-lg-5 pe-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
               <h1 data-aos="fade-up">Sambutan Kepala Desa Cikeas Udik</h1>
@@ -140,7 +139,7 @@
                 Selamat Datang di Website Resmi Desa Cikeas Udik
               </h4>             
                   <p>Saya selaku Kepala Desa Cikeas Udik mengucapkan selamat datang di Website milik Desa Cikeas Udik. Di era globalisasi ini, teknologi berkembang dengan pesat dan tidak dapat dipungkiri bahwa keberadaan sebuah Media Informasi pada suatu instansi adalah sebuah keniscayaan. Melalui media informasi berbasis website ini, kami menyampaikan berbagai informasi mengenai gambaran umum Desa Cikeas Udik dan program kerja yang dilakukan oleh pemerintah desa. Semoga website ini menjadi sarana komunikasi yang baik antara Pemerintah Desa Cikeas Udik dengan berbagai pihak khususnya masyarakat Desa Cikeas Udik. </p>
-                  <p>(Miptahul Palah, SE)</p>     
+                  <p><strong>(Miptahul Palah, SE)</strong></p>     
             </div><!-- End .content-->
           </div>
         </div>
