--- a/proker.html
+++ b/proker.html
@@ -40,7 +40,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">IPB-University</a></h1>
+        <h1 class="text-light"><a href="index.html">Desa Cikeas Udik</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -80,8 +80,8 @@
 
         <div class="section-title" data-aos="fade-up">
           <br>
-          <h2>Berikut ini adalah <strong>Program Kerja Unggulan </strong>kami</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Berikut ini adalah beberapa <strong>Program Kerja </strong>kami</h2>
+          <p></p>
         </div>
 
         <div class="row">
@@ -89,26 +89,26 @@
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
                 <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-                  <h4>Mencetak Lulusan Unggul</h4>
-                  <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
+                  <h4>Pembangunan/Peningkatan Infrastruktur Jalan</h4>
+                  <p>Berupa kegiatan betonisasi jalan desa dan jalan lingkungan yang pembiayaannya bersumber dari Dana Desa, BHPRD, Bantuan Keuangan Kabupaten, serta Bantuan Keuangan Propinsi.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-                  <h4>Penelitian</h4>
-                  <p>Voluptas vel esse repudiandae quo excepturi.</p>
+                  <h4>Bidang Kesehatan</h4>
+                  <p>Mengoptimalkan kegiatan Posyandu dan Pemberian Makanan Tambahan (PMT) bagi balita.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
-                  <h4>Pemberdayaan Masyarakat</h4>
-                  <p>Velit veniam ipsa sit nihil blanditiis mollitia natus.</p>
+                  <h4>Bidang Pendidikan</h4>
+                  <p>Pendirian PAUD Desa dan Pemberian Beasiswa Bantuan Peralatan Sekolah.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
-                  <h4>Inovasi</h4>
-                  <p>Ratione hic sapiente nostrum doloremque illum nulla praesentium id</p>
+                  <h4>Bidang Lingkungan</h4>
+                  <p>Kegiatan Kampung Ramah Lingkungan (KRL) dan Bank Sampah.</p>
                 </a>
               </li>
             </ul>
@@ -117,22 +117,22 @@
             <div class="tab-content">
               <div class="tab-pane active show" id="tab-1">
                 <figure>
-                  <img src="assets/img/proker/features-1.png" alt="" class="img-fluid">
+                  <img src="assets/img/proker/features-1.jpg" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-2">
                 <figure>
-                  <img src="assets/img/proker/features-2.png" alt="" class="img-fluid">
+                  <img src="assets/img/proker/features-2.jpg" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-3">
                 <figure>
-                  <img src="assets/img/proker/features-3.png" alt="" class="img-fluid">
+                  <img src="assets/img/proker/features-3.jpg" alt="" class="img-fluid">
                 </figure>
               </div>
               <div class="tab-pane" id="tab-4">
                 <figure>
-                  <img src="assets/img/proker/features-4.png" alt="" class="img-fluid">
+                  <img src="assets/img/proker/features-4.jpg" alt="" class="img-fluid">
                 </figure>
               </div>
             </div>
@@ -152,13 +152,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>IPB-University</h3>
+            <h3>Desa Cikeas Udik</h3>
             <p>
-              Dramaga <br>
+              Gunung Putri <br>
               Bogor<br>
               Jawa Barat <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +62 ...<br>
+              <strong>Email:</strong> cikeasudik.desa@gmail.com<br>
             </p>
           </div>
 
@@ -179,7 +179,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>IPB-University</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Desa Cikeas Udik</span></strong>. All Rights Reserved
         </div>
        
       </div>
