--- a/desaPresisi.html
+++ b/desaPresisi.html
@@ -51,7 +51,7 @@
       <div class="container d-flex justify-content-between">
 
         <div class="logo">
-          <h1 class="text-light"><a href="index.html">Desa Babakan</a></h1>
+          <h1 class="text-light"><a href="index.html">Desa Cikeas Udik</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
@@ -99,13 +99,13 @@
             <div class="row">
 
               <div class="col-lg-3 col-md-6 footer-contact">
-                <h3>Desa Babakan</h3>
+                <h3>Desa Cikeas Udik</h3>
                 <p>
-                  Ciseeng <br>
+                  Gunung Putri <br>
                   Bogor<br>
                   Jawa Barat <br><br>
-                  <strong>Phone:</strong> +1 5589 55488 55<br>
-                  <strong>Email:</strong> humaspemdesbabakan2329@gmail.com<br>
+                  <strong>Phone:</strong> +62 ...<br>
+                  <strong>Email:</strong> cikeasudik.desa@gmail.com<br>
                 </p>
               </div>
 
@@ -127,18 +127,11 @@
 
           <div class="me-md-auto text-center text-md-start">
             <div class="copyright">
-              &copy; Copyright <strong><span>Desa Babakan 2023</span></strong>. All Rights Reserved
+              &copy; Copyright <strong><span>Desa Cikeas Udik 2023</span></strong>. All Rights Reserved
             </div>
 
           </div>
-          <div class="social-links text-center text-md-right pt-3 pt-md-0">
-            <a href="https://instagram.com/pemdes.babakan?igshid=MzRlODBiNWFlZA==" class="twitter"><i
-                class="bx bxl-twitter"></i></a>
-            <a href="https://instagram.com/pemdes.babakan?igshid=MzRlODBiNWFlZA==" class="facebook"><i
-                class="bx bxl-facebook"></i></a>
-            <a href="https://instagram.com/pemdes.babakan?igshid=MzRlODBiNWFlZA==" class="instagram"><i
-                class="bx bxl-instagram"></i></a>
-          </div>
+          
         </div>
       </footer><!-- End Footer -->
 
@@ -168,7 +161,6 @@
           { menu: 'Tentang', link: 'tentang.html' },
           { menu: 'Program Kerja', link: 'proker.html' },
           { menu: 'Desa Presisi', link: 'wildesa.html' },
-          { menu: 'Galleri Kegiatan', link: 'kegiatan.html' }
         ]
       }
 
@@ -203,6 +195,7 @@
       l.bindPopup(out.join("<br />"));
     }
   }
+
   var jsonTest = new L.GeoJSON.AJAX(["assets/geojson/geojson.json"], { onEachFeature: popUp }).addTo(mymap);
 
 
