--- a/desaPresisi.html
+++ b/desaPresisi.html
@@ -160,7 +160,9 @@
           { menu: 'Home', link: 'index.html' },
           { menu: 'Tentang', link: 'tentang.html' },
           { menu: 'Program Kerja', link: 'proker.html' },
-          { menu: 'Desa Presisi', link: 'wildesa.html' },
+          { menu: 'Desa Presisi', link: 'desaPresisi.html' },
+          { menu: 'Galeri Video', link: 'galeri.html' }
+
         ]
       }
 
