--- a/tentang.html
+++ b/tentang.html
@@ -306,7 +306,8 @@
           { menu: 'Home', link: 'index.html' },
           { menu: 'Tentang', link: 'tentang.html' },
           { menu: 'Program Kerja', link: 'proker.html' },
-          { menu: 'Desa Presisi', link: 'desaPresisi.html' }
+          { menu: 'Desa Presisi', link: 'desaPresisi.html' },
+          { menu: 'Galeri Video', link: 'galeri.html' }
         ]
         }
 
